--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "knex": "^0.15.2",
     "mongoose": "^5.2.6",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.3",
     "npm": "^6.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
